--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Connection url for the database
 # add "?serverTimezone=GMT" for MySQL 5
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_jpa_onetomany?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/wizard?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=root
 
